Feat : Google search console

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="google-site-verification" content="Wv4mh--Q6S3OvESz2HX62HQL3Sz-rMkHVGIXbnR2aJ4" />
+
 <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
